# fea-box-demo

./: README.md  pyproject.toml
app/: streamlit_app.py
notebooks/: cube_thermal_demo.ipynb
src/digilab_samplers/: __init__.py  samplers.py
src/digilab_simulators/: __init__.py  vtu.py
src/digilab_simulators/simulators/: __init__.py  base.py  fea_box.py
tests/: test_cube_thermal_simulator.py  test_samplers.py
