[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cube-thermal-demo"
version = "0.1.0"
description = "Self-contained demo repo for a cube thermal steady-state simulator"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.24",
  "pandas>=2.0",
  "matplotlib>=3.7",
  "pydantic>=2.5",
  "typeguard>=4.1",
  "streamlit>=1.30",
  "pytest>=8.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.poetry]
packages = [
    { include = "digilab_simulators", from = "src" },
    { include = "digilab_samplers", from = "src" },
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
